--- a/Stata/StataGraph/StataGraph.rmd
+++ b/Stata/StataGraph/StataGraph.rmd
@@ -1,9 +1,8 @@
 
-```{r, echo=FALSE, results=FALSE, eval=TRUE}
+```{r, echo=FALSE, message=FALSE}
 require(knitr)
-knitr::opts_chunk$set(eval=FALSE, results=FALSE, message=FALSE, warning=FALSE, error=FALSE)
-statapath <- "/Applications/Stata/StataMP.app/Contents/MacOS/stata-mp"
-opts_chunk$set(engine="stata", engine.path=statapath, comment="")
+statapath <- "C:/Program Files/Stata16/StataMP-64.exe"
+opts_chunk$set(collectcode = TRUE, echo = FALSE, cleanlog = FALSE, engine="stata", engine.path=list(stata=statapath), comment="")
 ```
 
 # Stata Graphing
@@ -17,62 +16,41 @@ opts_chunk$set(engine="stata", engine.path=statapath, comment="")
 
 ## Setup
 
-### Software & Materials
-
-Laptop users: you will need a copy of Stata installed on your machine. 
-Harvard FAS affiliates can install a licensed version from <http://downloads.fas.harvard.edu/download>
-
-* Download class materials at <https://github.com/IQSS/dss-workshops/raw/master/Stata/StataModGraph.zip>
-* Extract materials from the zipped directory `StataMod.zip` (Right-click => Extract All on Windows, double-click on Mac) and move them to your desktop!
-
-### Organization
+### Class Structure and organization 
 
 * Please feel free to ask questions at any point if they are relevant to the current topic (or if you are lost!)
 * Collaboration is encouraged - please introduce yourself to your neighbors!
 * If you are using a laptop, you will need to adjust file paths accordingly
 * Make comments in your Do-file - save on flash drive or email to yourself
 
-### Goals
 
-* This is an introduction to modeling and visualization in Stata
+### Prerequisites
+
+This is an intermediate-level Stata graphics workshop 
+
 * Assumes basic knowledge of Stata
-* Not appropriate for people already familiar with Stata
+* Not appropriate for people already well familiar with graphing in Stata
 * If you are catching on before the rest of the class, experiment with command features described in help files
-* Learning Objectives:
-    + Fit models in Stata
-    + Test modeling assumptions
-    + Plot basic graphs in Stata
-    + Plot two-way graphs
 
 
-## Fitting models
+## Goals
 
-### Today's Dataset
+<div class="alert alert-success">
+**We will learn about the Stata graphics by practice graphing two real datasets.** In particular, our goals are:
 
-* We have data on a variety of variables for all 50 states
-* Population, density, energy use, voting tendencies, graduation rates, income, etc.
-* We're going to be predicting SAT scores
-* Univariate Regression: SAT scores and Education Expenditures
-* Does the amount of money spent on education affect the mean SAT score in a state?
-* Dependent variable: csat
-* Independent variable: expense
-
-### Opening Files
-
-* Look at bottom left hand corner of Stata screen
-    + This is the directory Stata is currently reading from
-* Files are located in the StataStatistics folder on the Desktop
-* Start by telling Stata where to look for these
-
-```{stata}
-  // change directory
-  cd "~/Desktop/Stata/StataStatGraph"
-```
-
-
+1. Plot basic graphs in Stata 
+2. Plot two-way graphs in Stata
+</div>
 
 
 ## Graphing in Stata
+
+<div class="alert alert-info">
+**GOAL: To get familiar with how to produce graphs in Stata.** In particular:
+
+1. Learn about graphing strategies 
+2. Compare two examples of a bad graph and a good graph 
+</div>
 
 ### Graphing Strategies
 
@@ -84,22 +62,29 @@ Harvard FAS affiliates can install a licensed version from <http://downloads.fas
     + Shading
     + Distracting colors
     + Decoration
-* Always know what you’re working with before you get started
+* Always know what you are working with before you get started
     + Recognize scale of data
-    + If you’re using multiple variables – how do their scales align?
+    + If you are using multiple variables, how do their scales align?
 * Before any graphing procedure review variables with `codebook`, `sum`, `tab`, etc.
 * HELPFUL STATA HINT: If you want your command to go on multiple lines use `///` at end of each line
 
 ### Terrible Graph
-
-![](Stata/StataModGraph/images/Terrible.png)
+![](C:/Users/Yihan/.git/dss-workshops/Stata/StataGraph/images/Terrible.png)
 
 ### Much Better Graph
 
-![](Stata/StataModGraph/images/Good.png)
+![](C:/Users/Yihan/.git/dss-workshops/Stata/StataGraph/images/Good.png)
 
 
 ## Univariate Graphics
+
+<div class="alert alert-info">
+**GOAL: To learn how to graph single continuous and categorical variable.** In particular:
+
+1. Graph a continuous variable using histogram
+2. Graph a categorical variable using bar graph
+</div>
+
 
 ### Our First Dataset
 
@@ -112,15 +97,17 @@ Harvard FAS affiliates can install a licensed version from <http://downloads.fas
 ```{stata}
   // Step 1: tell Stata where to find data:
   cd "~/StataGraphics/dataSets"
+
   // Step 2: call up our dataset:
   use TimePollPubSchools.dta
 ```
 
-### Single Continuous Variables
 
-**Example: Histograms**
+### Single Continuous Variable
 
-* Stata assumes you’re working with continuous data
+**Example: Histogram**
+
+* Stata assumes you are working with continuous data
 * Very simple syntax:
     + `hist varname`
 * Put a comma after your varname and start adding options
@@ -133,10 +120,10 @@ Harvard FAS affiliates can install a licensed version from <http://downloads.fas
 * To change the numeric depiction of your data add these options after the comma
     + Choose one: density fraction frequency percent
 * Be sure to properly describe your histogram:
-    + `title(insert name of graph)`
-    + `subtitle(insert subtitle of graph)`
-    + `note(insert note to appear at bottom of graph)`
-    + `caption(insert caption to appear below notes)`
+    + `title`(insert name of graph)
+    + `subtitle`(insert subtitle of graph)
+    + `note`(insert note to appear at bottom of graph)
+    + `caption`(insert caption to appear below notes)
 
 **Histogram Example**
 
@@ -144,23 +131,23 @@ Harvard FAS affiliates can install a licensed version from <http://downloads.fas
   hist F1, bin(10) percent title(TITLE) ///
     subtitle(SUBTITLE) caption(CAPTION) note(NOTES)
 ```
+![](C:/Users/Yihan/.git/dss-workshops/Stata/StataGraph/images/hist1.png)
 
-![](Stata/StataModGraph/images/hist1.png)
 
 **Axis Titles & Labels**
 
 * Axis title options (default is variable label):
-    + `xtitle(insert x axis name)`
-    + `ytitle(insert y axis name)`
-* Don’t want axis titles?
-    + `xtitle("")`
-    + `ytitle("")`
+    + `xtitle`(insert x axis name)
+    + `ytitle`(insert y axis name)
+* Don't want axis titles?
+    + `xtitle`("")
+    + `ytitle`("")
 * Add labels to X or Y axis:
-    + xlabel(insert x axis label)
-    + ylabel(insert y axis label)
+    + `xlabel`(insert x axis label)
+    + `ylabel`(insert y axis label)
 * Tell Stata how to scale each axis
-    + xlabel(start\#(increment)end\#)
-    + xlabel(0(5)100)
+    + `xlabel`(start\#(increment)end\#)
+    + `xlabel`(0(5)100)
 * This would label x-axis from 0-100 in increments of 5
 
 **Axis Labels Example** 
@@ -172,9 +159,9 @@ Harvard FAS affiliates can install a licensed version from <http://downloads.fas
   ytitle(here's your y-axis title)
 ```
 
-![](Stata/StataModGraph/images/hist2.png)
+![](C:/Users/Yihan/.git/dss-workshops/Stata/StataGraph/images/hist2.png)
 
-### Single Categorical Variables
+### Single Categorical Variable
 
 * We can also use the `hist` command for bar graphs
     + Simply specify "discrete" with options
@@ -187,23 +174,93 @@ Harvard FAS affiliates can install a licensed version from <http://downloads.fas
    5 "Other") discrete percent addlabels
 ```
 
-![](Stata/StataModGraph/images/bargraph.png)
+![](C:/Users/Yihan/.git/dss-workshops/Stata/StataGraph/images/bargraph.png)
 
 ### Exercise 0
 
-**Histograms Bar Graphs**
+**Histograms & Bar Graphs**
 
-1.  Open the datafile, NatNeighCrimeStudy.dta.
-2.  Create a histogram of the tract-level poverty rate (variable name: `T_POVRTY`).
+1.  Open the datafile, ``NatNeighCrimeStudy.dta``.
+
+```{stata}
+##
+```
+
+2.  Create a histogram of the tract-level poverty rate (``T_POVRTY``).
+
+```{stata}
+##
+```
+
 3.  Insert the normal curve over the histogram
+
+```{stata}
+##
+```
+
 4.  Change the numeric representation on the Y-axis to "percent"
+
+```{stata}
+##
+```
+
 5.  Add appropriate titles to the overall graph and the x axis and y axis. Also, add a note that states the source of this data.
-6.  Open the datafile, TimePollPubSchools.dta
-7.  Create a histogram of the question, "What grade would you give your child’s school" (variable name: Q11). Be sure to tell Stata that this is a categorical variable.
+
+```{stata}
+##
+```
+
+6.  Open the datafile, ``TimePollPubSchools.dta``.
+
+```{stata}
+##
+```
+
+7.  Create a histogram of the question, "What grade would you give your child's school" (``Q11``). Be sure to tell Stata that this is a categorical variable.
+
+```{stata}
+##
+```
+
 8.  Format this graph so that the axes have proper titles and labels. Also, add an appropriate title to the overall graph that goes onto two lines. Add a note stating the source of the data.
+
+```{stata}
+##
+```
+
+
+<details>
+  <summary><span style="color:red"><b>Click for Exercise 0 Solution</b></span></summary>
+  <div class="alert alert-danger">
+```{stata}
+
+use NatNeighCrimeStudy.dta, clear
+
+hist T_POVRTY
+hist T_POVRTY, normal
+hist T_POVRTY,normal percent
+hist T_POVRTY,normal percent title(Poverty Rate Distribution Among Study Participants) xtitle(Poverty Rate) ytitle (Percent) note(Notes: Results are based on raw data)
+
+use TimePollPubSchools.dta, clear
+hist Q11, discrete
+hist Q11, title(School grading breakdown of Time Poll Sample) xtitle(Grades) ytitle(Percent) xlabel(1 "A" 2 "B" 3 "C" 4 "D" 5 "F") title(Grade breakdown among Schools) note(Notes: Data is based on a survey of 1000 adults in U.S. conducted in 2010)
+
+```
+</div>
+</details>
 
 
 ## Bivariate Graphics
+
+<div class="alert alert-info">
+**GOAL: To learn how to graph twoway bivariate graphs.** In particular:
+
+1. Learn the twoway command 
+2. Learn the twoway title options 
+3. Learn the twoway symbol options 
+4. Learn how to overlay twoway graphs 
+</div>
+
 
 ### Next Dataset:
 
@@ -222,7 +279,8 @@ Harvard FAS affiliates can install a licensed version from <http://downloads.fas
 * Some basic examples:
 
 ```{stata}
-  use NatNeighCrimeStudy.dta
+  use NatNeighCrimeStudy.dta, clear 
+
   twoway scatter T_PERCAP T_VIOLNT
   twoway dropline T_PERCAP T_VIOLNT
   twoway  lfitci T_PERCAP T_VIOLNT
@@ -234,15 +292,15 @@ Harvard FAS affiliates can install a licensed version from <http://downloads.fas
   twoway scatter T_PERCAP T_VIOLNT, by(DIVISION)
 ```
 
-![](Stata/StataModGraph/images/twowayby.png)
+![](C:/Users/Yihan/.git/dss-workshops/Stata/StataGraph/images/twowayby.png)
 
 **Twoway Title Options**
 
 * Same title options as with histogram
-    + `title(insert name of graph)`
-    + `subtitle(insert subtitle of graph)`
-    + `note(insert note to appear at bottom of graph)`
-    + `caption(insert caption to appear below notes)`
+    + `title`(insert name of graph)
+    + `subtitle`(insert subtitle of graph)
+    + `note`(insert note to appear at bottom of graph)
+    + `caption`(insert caption to appear below notes)
 
 **Twoway Title Options Example**
 
@@ -266,11 +324,11 @@ Harvard FAS affiliates can install a licensed version from <http://downloads.fas
 
 **Twoway Symbol Options**
 
-* A variety of symbol shapes are available: use `palette symbolpalette` to seem them and `msymbol()` to set them
+* A variety of symbol shapes are available: use `palette symbolpalette` to see them and `msymbol()` to set them
 
-![](Stata/StataModGraph/images/Symbol.png)
+![](C:/Users/Yihan/.git/dss-workshops/Stata/StataGraph/images/Symbol.png)
 
-**Twoway Symbol Options**
+**Twoway Symbol Options Example**
 
 ```{stata}
   twoway scatter T_PERCAP T_VIOLNT, ///
@@ -281,13 +339,15 @@ Harvard FAS affiliates can install a licensed version from <http://downloads.fas
   msymbol(Sh) mcolor("red")
 ```
 
-![](Stata/StataModGraph/images/msymbol_mcolor.png)
+![](C:/Users/Yihan/.git/dss-workshops/Stata/StataGraph/images/msymbol_mcolor.png)
 
 ### Overlaying Twoway Graphs
 
-* Very simple to combine multiple graphs…just put each graph command in parentheses
+* Very simple to combine multiple graphs by just put each graph command in parentheses
     + `twoway (scatter var1 var2) (lfit var1 var2)`
+    
 * Add individual options to each graph within the parentheses
+
 * Add overall graph options as usual following the comma
     + `twoway (scatter var1 var2) (lfit var1 var2), options`
 
@@ -313,25 +373,12 @@ Harvard FAS affiliates can install a licensed version from <http://downloads.fas
                               Crime Study 2000) legend(off)
 ```
 
-### Exercise 1
 
-**The TwoWay Family**
-
-Open the datafile, NatNeighCrimeStudy.dta.
-
-1.  Create a basic twoway scatterplot that compares the city unemployment rate (`C_UNEMP`) to the percent secondary sector low-wage jobs (`C_SSLOW`)
-2.  Generate the same scatterplot, but this time, divide the plot by the dummy variable indicating whether the city is located in the south or not (`C_SOUTH`)
-3.  Change the color of the symbol that you use in this scatter plot
-4.  Change the type of symbol you use to a marker of your choice
-5.  Notice in your scatterplot that is broken down by `C_SOUTH` that there is an outlier in the upper right hand corner of the "Not South" graph. Add the city name label to this marker.
-6.  Review the options available under "help twoway<sub>options</sub>" and change one aspect of your graph using an option that we haven’t already reviewed
-
-
-## Twoway Line Graphs
+### Twoway Line Graphs
 
 * Line graphs helpful for a variety of data
     + Especially any type of time series data
-* We’ll use data on US life expectancy from 1900-1999
+* We will use data on US life expectancy from 1900-1999
     + `webuse uslifeexp, clear`
 
 ```{stata}
@@ -340,44 +387,88 @@ Open the datafile, NatNeighCrimeStudy.dta.
       (line le_bm year, mcolor("green"))
 ```
 
-![](Stata/StataModGraph/images/lineGraph1.png)
+![](C:/Users/Yihan/.git/dss-workshops/Stata/StataGraph/images/lineGraph1.png)
 
 ```{stata}
   twoway (line (le_wfemale le_wmale le_bf le_bm) year, ///
       lpattern(dot solid dot solid))
 ```
 
-![](Stata/StataModGraph/images/linegraph2.png)
+![](C:/Users/Yihan/.git/dss-workshops/Stata/StataGraph/images/linegraph2.png)
 
-**Stata Graphing Lines**
+### Stata Graphing Lines
 
 ```{stata}
   palette linepalette
 ```
 
-![](Stata/StataModGraph/images/linepalette.png)
+![](C:/Users/Yihan/.git/dss-workshops/Stata/StataGraph/images/linepalette.png)
+
+
+### Exercise 1
+
+**The TwoWay Family**
+
+Open the datafile, ``NatNeighCrimeStudy.dta``.
+
+1.  Create a basic twoway scatterplot that compares the city unemployment rate (`C_UNEMP`) to the percent secondary sector low-wage jobs (`C_SSLOW`)
+
+```{stata}
+##
+```
+
+2.  Generate the same scatterplot, but this time, divide the plot by the dummy variable indicating whether the city is located in the south or not (`C_SOUTH`)
+
+```{stata}
+##
+```
+
+3.  Change the color of the symbol that you use in this scatter plot
+
+```{stata}
+##
+```
+
+4.  Change the type of symbol you use to a marker of your choice
+
+```{stata}
+##
+```
+
+5.  Notice in your scatterplot that is broken down by ``C_SOUTH`` that there is an outlier in the upper right hand corner of the "Not South" graph. Add the city name label to this marker.
+
+```{stata}
+##
+```
+
+
+<details>
+  <summary><span style="color:red"><b>Click for Exercise 1 Solution</b></span></summary>
+  <div class="alert alert-danger">
+```{stata}
+use NatNeighCrimeStudy.dta, clear 
+twoway scatter C_UNEMP C_SSLOW
+twoway scatter C_UNEMP C_SSLOW, by(C_SOUTH)
+twoway scatter C_UNEMP C_SSLOW, by(C_SOUTH) mcolor("orange")
+twoway scatter C_UNEMP C_SSLOW, by(C_SOUTH) mcolor("orange")msymbol(diamond)
+twoway scatter C_UNEMP C_SSLOW, by(C_SOUTH) if C_UNEMP>25 mcolor("orange")msymbol(diamond)mlabel(CITY)
+twoway (scatter C_UNEMP C_SSLOW if T_UNEMP>15 & C_SSLOW>25, mlabel(CITY) by(C_SOUTH)) (scatter C_UNEMP C_SSLOW, by(C_SOUTH))
+
+```
+</div>
+</details>
 
 
 ## Exporting Graphs
+
+<div class="alert alert-info">
+**GOAL: To learn how to export graphs in Stata.** 
+</div>
 
 * From Stata, right click on image and select "save as" or try syntax:
     + `graph export myfig.esp, replace`
 * In Microsoft Word: insert -> picture -> from file
     + Or, right click on graph in Stata and copy and paste into MS Word
-
-
-## Exercise Solutions
-
-### Ex 0: prototype
-```{stata}
-**
-```
-
-### Ex 1: prototype
-```{stata}
-**
-```
-
 
 
 ## Wrap-up
